<resources>
    <string name="time_out_error">وقفه در سرور</string>
    <string name="connection_error">عدم دسترسی به شبکه</string>
    <string name="single_no_item_emitted_error">جوابی دریافت نشد</string>
    <string name="data_receive_error">خطا در دریافت اطلاعات</string>
    <string name="server_error">خطا در برقراری ارتباط</string>
    <string name="app_name">شربت اوغلی</string>
    <string name="please_wait">لطفا صبر کنید</string>
    <string name="login">ورود</string>
    <string name="login_title">ورود به حساب کاربری</string>
    <string name="api_response_failed">خطا در برقراری ارتباط</string>
    <string name="authentication_failed">اعتبار زمانی منقضی شده است</string>
    <string name="google_play_services_not_installed">لطفا ابتدا google play services را نصب کنید</string>
    <string name="get_permission_failed">خطا در اعطای مجوز</string>
    <string name="no_permission_title">اعطای مجوز</string>
    <string name="btn_alert">باشه</string>
    <string name="btn_ok">باشه</string>
    <string name="tel_mobile_number">شماره تلفن همراه</string>
    <string name="validation_phonenumber_or_email">شماره تلفن خود را وارد کنید</string>
    <string name="validation_phonenumber">نام کاربری کامل نیست</string>
    <string name="validation_password">لطفا رمز عبور را وارد کنید</string>
    <string name="validation_re_password_length">برای تکرار رمز عبور حداقل 6 کاراکتر وارد نمائید</string>
    <string name="validation_re_password">لطفا تکرار رمز عبور را وارد نمائید</string>
    <string name="validation_two_password">رمز عبور و تکرار آن با هم یکسان نیست</string>
    <string name="change_password_ok">تغییر رمز عبور با موفقیت انجام شد</string>
    <string name="user_name">نام کاربری</string>
    <string name="password_user">رمز عبور</string>
    <string name="text_attention">توجه</string>
    <string name="ok">تائید</string>
    <string name="pop_up_ok">تائید</string>
    <string name="btn_cancel">انصراف</string>
    <string name="forget_password">فراموشی رمز عبور</string>
    <string name="register_user">ثبت نام</string>
    <string name="title">عنوان</string>
    <string name="text">متن</string>
    <string name="software_updating">به روز رسانی نرم افزار</string>
    <string name="lost_internet">به اینترنت متصل نیستید</string>
    <string name="data_incorrect">داده ورودی صحیح نیست</string>
    <string name="validation_password_length">برای رمز عبور حداقل 5 کاراکتر وارد نمائید</string>
    <string name="not_can_call">امکان فراخوانی متد وجود ندارد</string>
    <string name="problem">مشکلی رخ داده است</string>
    <string name="forget_password_title">فراموشی رمز عبور</string>
    <string name="send">ارسال</string>
    <string name="txt_user_name">نام کاربری</string>
    <string name="txt_password">رمز عبور</string>
    <string name="name">نام</string>
    <string name="txt_menu_exit">خروج</string>
    <string name="start">شروع</string>
    <string name="setting">تنظیمات</string>
    <string name="help">راهنما</string>
    <string name="about_us">درباره ما</string>
    <string name="messagees">صندوق پیام ها</string>
    <string name="payment">پرداخت</string>
    <string name="sendToPayment">ارسال به دیگران</string>
    <string name="sendToAyande">ارسال به آینده</string>
    <string name="detail">مشاهده جزئیات</string>
    <string name="search">جستجو</string>
    <string name="share_using">اشتراک گذاری</string>
    <string name="cardToCard">کارت به کارت</string>
    <string name="mobile_bill">قبض موبایل</string>
    <string name="sharge">خرید شارژ</string>
    <string name="service_bill">قبض خدماتی</string>
    <string name="second_password">رمز دوم </string>
    <string name="request_payment">مبلغ درخواستی(ریال)</string>
    <string name="card_number_destination">کارت مقصد</string>
    <string name="cvv2">CVV</string>
    <string name="date_expire">تاریخ انقضا</string>
    <string name="year">سال</string>
    <string name="month">ماه</string>
    <string name="send_request">ارسال درخواست</string>
    <string name="charge">شارژ</string>
    <string name="packetInternet">بسته های اینترنت</string>
    <string name="bill">قبوض و جرائم</string>
    <string name="traveler">مسافرتی</string>
    <string name="cultureAndArt">فرهنگ و هنر</string>
    <string name="source_pan">کارت مبدا</string>
    <string name="price">مبلغ(ریال)</string>
    <string name="enter_amount">مبلغ را وارد کنید</string>
    <string name="money_transfer">انتقال وجه</string>
    <string name="amount_is_null">مبلغ انتقال را وارد کنید</string>
    <string name="source_pan_is_null">کارت مبدا صحیح را وارد کنید</string>
    <string name="cvv_is_null">CVV صحیح را وارد کنید</string>
    <string name="month_is_null">ماه</string>
    <string name="year_is_null">سال</string>
    <string name="dest_pan_is_null">کارت مقصد صحیح را وارد کنید</string>
    <string name="password_is_null">رمز دوم صحیح را وارد نمائید</string>
    <string name="quila_name">quila_name</string>
    <string name="quila_tagline">quilaTagline</string>
    <string name="lorem">looooooooreeeeeeeeeeeeeem</string>
    <string name="quila_name2">quilaname2</string>
    <string name="operator">اپراتوری</string>
    <string name="electronic_bank">بانکداری الکترونیکی</string>
    <string name="telecommunication">مخابراتی</string>
    <string name="others">سایر</string>
    <string name="records">سوابق</string>
    <string name="question">سوالات متداول</string>
    <string name="call_us">تماس با ما</string>
    <string name="idea">ثبت نظر</string>
    <string name="invoice_number_error">کد شناسایی یکسان نیست</string>
    <string name="paied_is_ok">پرداخت با موفقیت انجام شد</string>
    <string name="charge_surprise">شارژ شگفت انگیز</string>
    <string name="pay_online">پرداخت آنلاین</string>
    <string name="packetInternetAndCharge">شارژ و اینترنت</string>
    <string name="autocharge">شارژ مستقیم</string>
    <string name="chargePin">پین شارژ</string>
    <string name="manageCards">مدیریت کارت ها</string>
    <string name="inventory">موجودی حساب</string>
    <string name="crimes">جرائم رانندگی</string>
    <string name="bills">قبوض شهری</string>
    <string name="bill_phone">قبض تلفن ثابت</string>
    <string name="bill_cell">قبض همراه اول</string>
    <string name="bill_phone_irancell">قبض ایرانسل</string>
    <string name="assistance">دستیار هوشمند مالی</string>
    <string name="airline">بلیط هواپیما</string>
    <string name="bus">بلیط اتوبوس</string>
    <string name="train">بلیط قطار</string>
    <string name="consert">بلیط کنسرت</string>
    <string name="teatr">بلیط تئاتر</string>
    <string name="cinema">بلیط سینما</string>
    <string name="exit_ok">آیا برای خروج از برنامه اطمینان دارید؟</string>
    <string name="afghan_card">افغان کارت</string>
    <string name="iraq_card">عراق کارت</string>
    <string name="card_iq">کارت هوشمند</string>
    <string name="type_card">انتخاب کارت</string>
    <string name="new_card"> کارت انتخابی</string>
    <string name="list_bank">لیست بانک ها</string>
    <string name="list_car">لیست خودرو ها</string>
    <string name="cvv">cvv :</string>
    <string name="save">ذخیره کارت</string>
    <string name="delete">حذف</string>
    <string name="editCard">ویرایش کارت</string>
    <string name="name_bank_is_null">نام بانک را وارد کنید</string>
    <string name="dont_save_card_enter_your_card">کارتی ثبت نشده است. لطفا اطلاعات کارت خود را وارد کنید.</string>
    <string name="do_delete_card">آیا از حذف سفارش اطمینان دارید؟</string>
    <string name="do_edit_card">آیا از ویرایش سفارش اطمینان دارید؟</string>
    <string name="card_exsist_edit_please">اطلاعات این کارت قبلا ثبت شده است. درصورت نیاز آن را ویرایش نمائید.</string>
    <string name="get_inventory">دریافت موجودی حساب</string>
    <string name="receipt_card_to_card">رسید انتقال وجه</string>
    <string name="always">دائمی</string>
    <string name="credit">اعتباری</string>
    <string name="rial">ریال</string>
    <string name="bank_dest">بانک مقصد</string>
    <string name="customer_club">باشگاه مشتریان</string>
    <string name="degree">درجه کاربر</string>
    <string name="bronz">برنز</string>
    <string name="change_credit">تبدیل اعتبار به کد تخفیف</string>
    <string name="credit_full">امتیاز کل</string>
    <string name="sim">0 </string>
    <string name="rate">امتیاز کل</string>
    <string name="filter">فیلتر</string>
    <string name="all">همه</string>
    <string name="show_rule">مشاهده قوانین</string>
    <string name="card_saved">کارت با موفقیت ذخیره شد</string>
    <string name="description">توضیحات</string>
    <string name="source_pan_is_bad">کارت مبدا وارد شده معتبر نمی باشد</string>
    <string name="card_number_is_bad">شماره کارت وارد شده معتبر نمی باشد</string>
    <string name="dest_pan_is_bad">کارت مقصد وارد شده معتبر نمی باشد</string>
    <string name="card_is_null">شماره کارت را وارد نمائید</string>
    <string name="add_merchant">ثبت پذیرنده</string>
    <string name="profile">ثبت نام/تکمیل مدارک</string>
    <string name="request_pos">درخواست دستگاه</string>
    <string name="transaction">تراکنش ها</string>
    <string name="documents">مشاهده مدارک</string>
    <string name="message">پیام ها</string>
    <string name="add_request">ثبت درخواست/خرابی</string>
    <string name="family">نام خانوادگی</string>
    <string name="cell_number">شماره موبایل</string>
    <string name="national_code">کد ملی</string>
    <string name="set_profile">ثبت نام</string>
    <string name="real_person">شخص حقیقی</string>
    <string name="legal_person">شخص حقوقی</string>
    <string name="national_card">کد ملی</string>
    <string name="birth_cert">شناسنامه</string>
    <string name="certificate">مجوزها</string>
    <string name="bill_work">قبض</string>
    <string name="cert_code_posti">گواهی کد پستی</string>
    <string name="certificate_sheba">گواهی شبا</string>
    <string name="app_need_access_camera">برنامه برای استفاده از دوربین نیاز به دسترسی دارد.</string>
    <string name="app_need_access_location">برنامه برای استفاده از موقعیت مکانی نیاز به دسترسی دارد.</string>
    <string name="cancel">انصراف</string>
    <string name="permission_camera_granted">اجازه دسترسی داده نشد</string>
    <string name="profile_doc">ثبت نام و تکمیل مدارک</string>
    <string name="credit_card">کیف پول اعتباری</string>
    <string name="enter_info">ورود به برنامه</string>
    <string name="instructions">لطفا انگشت خود را روی سنسور اثرانگشت قرار دهید</string>
    <string name="your_phone_dont_use_from_fingerprint">دستگاه شما از تأیید اثر انگشت پشتیبانی نمی کند</string>
    <string name="please_active_permission_fingerprint">لطفا مجوز اثر انگشت را فعال کنید</string>
    <string name="fingerprint_not_set_in_your_phone">اثر انگشت تعریف نشده است. لطفا حداقل یک اثر انگشت را در تنظیمات دستگاه خود ثبت کنید</string>
    <string name="please_set_password_yor_phone">لطفا امنیت قفل صفحه را در تنظیمات دستگاه خود فعال کنید</string>
    <string name="login_please">لطفا وارد برنامه شوید</string>
    <string name="old_register">این کاربر قبلا ثبت نام کرده است</string>
    <string name="enter_password_cvv">اطلاعات کارت خود را وارد کنید</string>
    <string name="tel_home">تلفن ثابت</string>
    <string name="nameAndFamily">نام و نام خانوادگی</string>
    <string name="list_customer">انتخاب مشتری</string>
    <string name="set_order">ثبت سفارش</string>
    <string name="priceOne">قیمت هر متر مربع</string>
    <string name="tool">طول</string>
    <string name="arz">عرض</string>
    <string name="sumPrice">قیمت کل</string>
    <string name="signUpCustomer">ثبت نام مشتری</string>
    <string name="area">منطقه</string>
    <string name="infoSum">اطلاعات جمع</string>
    <string name="address">آدرس</string>
    <string name="infoDistribute">اطلاعات پخش</string>
    <string name="list_sum">لیست جمع</string>
    <string name="validation_name">نام و نام خانوادگی خود را وارد کنید</string>
    <string name="validation_telhome">شماره تلفن منزل را به درستی وارد کنید</string>
    <string name="number">تلفن همراه</string>
    <string name="numberhome">تلفن ثابت</string>
</resources>