<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@drawable/bg_header_dialog"
            android:elevation="16dp">

        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bg_btm_circle"
            android:elevation="16dp"
            android:padding="@dimen/padding_common"
            android:src="@drawable/sms"
            android:tint="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_alert_title"
            style="@style/AppTheme.TextViewLableGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:text="@string/title"
            android:textAlignment="center"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tv_alert_message"
            style="@style/AppTheme.TextViewLableGray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_alert_title"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_normal"
            android:text="@string/text"
            android:textAlignment="center" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_alert_ok"
        style="@style/AppTheme.ButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_small"
        android:text="@string/ok" />
</LinearLayout>
