<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_mini_mini_small"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:gravity="right"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                style="@style/AppTheme.TextViewDetailLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/padding_common"
                android:text="@string/name" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_500" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtnumber"
                style="@style/AppTheme.TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/number" />

            <TextView
                android:id="@+id/telnumber"
                style="@style/AppTheme.TextViewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_toLeftOf="@+id/txtnumber"
                android:text="@string/number" />

            <TextView
                android:id="@+id/txtnumber2"
                style="@style/AppTheme.TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:layout_toRightOf="@+id/numberhome"
                android:text="@string/numberhome" />

            <TextView
                android:id="@+id/numberhome"
                style="@style/AppTheme.TextViewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/numberhome" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/taddress"
                style="@style/AppTheme.TextViewWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:text="@string/address" />

            <TextView
                android:id="@+id/address"
                style="@style/AppTheme.TextViewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_toLeftOf="@+id/taddress"
                android:text="@string/address" />
        </RelativeLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>