<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundPage"
    tools:Context="com.koohpar.oghli.ui.searchCustomer.SearchCustomerActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.koohpar.oghli.ui.searchCustomer.SearchCustomerViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/main_header_selector">

            <ImageView
                android:id="@+id/imgCard"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_normal"
                android:padding="@dimen/padding_common"
                android:src="@drawable/search"
                android:tint="@color/white" />

            <TextView
                style="@style/AppTheme.font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/imgCard"
                android:text="@string/search"
                android:textColor="@color/white" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayoutUserName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/iran_sans"
                android:hint="@string/nameAndFamily"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterEnabled="false"
                app:counterMaxLength="50"
                app:errorEnabled="false"
                app:helperTextEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userName"
                    style="@style/AppTheme.TextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayoutTel"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/iran_sans"
                android:hint="@string/tel_mobile_number"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterEnabled="false"
                app:counterMaxLength="10"
                app:errorEnabled="false"
                app:helperTextEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tel"
                    style="@style/AppTheme.TextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textLayoutTelHome"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:fontFamily="@font/iran_sans"
                android:hint="@string/tel_home"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@color/colorPrimary"
                app:counterEnabled="false"
                app:counterMaxLength="10"
                app:errorEnabled="false"
                app:helperTextEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telHome"
                    style="@style/AppTheme.TextViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textAlignment="center" />
            </android.support.design.widget.TextInputLayout>


            <Button
                style="@style/AppTheme.ButtonPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:onClick="@{() -> viewModel.onCallSearch()}"
                android:text="جستجوی مشتری" />
        </LinearLayout>


    </LinearLayout>
</layout>