<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/backgroundPage"
    tools:Context="com.koohpar.oghli.ui.login.LoginActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.koohpar.oghli.ui.login.LoginViewModel" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            tools:context="com.koohpar.oghli.activities.LoginActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:background="@color/blue_full">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_centerHorizontal="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/AppTheme.TextViewDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView2"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_xlarge"
                    android:visibility="visible" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="170dp"
                android:background="@drawable/bg_btn_white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textLayoutUserName"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:fontFamily="@font/iran_sans"
                        android:hint="@string/user_name"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:counterEnabled="false"
                        app:counterMaxLength="20"
                        app:errorEnabled="false"
                        app:helperTextEnabled="true">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/userName"
                            style="@style/AppTheme.TextViewTitle"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLength="11"
                            android:textAlignment="center" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textLayoutPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:fontFamily="@font/iran_sans"
                        android:hint="@string/password_user"
                        app:boxBackgroundMode="outline"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:counterEnabled="false"
                        app:counterMaxLength="12"
                        app:errorEnabled="false"
                        app:helperTextEnabled="false">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password"
                            style="@style/AppTheme.TextViewTitle"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/margin_small"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="12"
                            android:textAlignment="center" />
                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>


                <Button
                    style="@style/AppTheme.ButtonPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:onClick="@{() -> viewModel.onCallSendTelNumber()}"
                    android:text="ورود" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="@dimen/margin_small"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/AppTheme.TextViewDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:onClick="@{() -> viewModel.onForgetPassword()}"
                        android:text="@string/forget_password"
                        android:textColor="@color/blue_full" />

                    <TextView
                        style="@style/AppTheme.TextViewDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_normal"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:onClick="@{() -> viewModel.onSignUp()}"
                        android:text="@string/register_user"
                        android:textColor="@color/blue_full" />


                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>
</layout>